Fixed a few minor layout issues on the EditGuestbookQuestionnairePage. [ref 2280]

--- a/dvn-app/trunk/src/DVN-web/web/resources/css/dvnspecific.css
+++ b/dvn-app/trunk/src/DVN-web/web/resources/css/dvnspecific.css
@@ -235,8 +235,7 @@ span.dvnAddClassificationDvNotReleased{background:url(/dvn/resources/images/icon
 .dvnGuestbookCustomQuestionsCol3 {width:20%;text-align:center;}
 .dvnGuestbookCustomQuestionsCol3 .iceCmdLnk:first-child {margin-right:2em;}
 .dvnGuestbookCustomQuestions.iceDatTbl, .dvnGuestbookCustomQuestions.iceDatTbl tr, .dvnGuestbookCustomQuestions.iceDatTbl td, .dvnGuestbookCustomQuestions.iceDatTbl table {border:0;background:none;}
-.dvnGuestbookCustomQuestions.iceDatTbl {margin-top:0;border-top:1px solid lightgray;}
-.dvnGuestbookCustomQuestions.iceDatTbl td.iceDatTblCol1 {text-align:left;}
+.dvnGuestbookCustomQuestions.iceDatTbl {margin-top:0;}
 .dvnGuestbookCustomQuestions.iceDatTbl td span.iceOutTxt {display:inline;color:#464646;}
 .dvnGuestbookCustomQuestions.iceDatTbl tr {border-bottom:1px solid lightgray;}
 .dvnGuestbookCustomQuestions.iceDatTbl .iceDatTbl {margin-left:1em;}
